--- a/MissedConnections/app/src/main/res/layout/activity_maps.xml
+++ b/MissedConnections/app/src/main/res/layout/activity_maps.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/maps_header"
         android:layout_width="fill_parent"
         android:layout_height="55dp"
         android:background="@color/colorAccent"
@@ -18,7 +19,7 @@
             android:gravity="center_vertical"
             android:paddingEnd="0dp"
             android:paddingStart="10dp"
-            android:text="Menu"
+            android:text="@string/fa_icon_bars"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
 
@@ -41,7 +42,7 @@
             android:gravity="center_vertical"
             android:paddingEnd="10dp"
             android:paddingStart="0dp"
-            android:text="Button"
+            android:text="@string/fa_icon_plus"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
     </RelativeLayout>
