--- a/MissedConnections/app/src/main/res/layout/activity_maps.xml
+++ b/MissedConnections/app/src/main/res/layout/activity_maps.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/maps_menu_button"
+            android:id="@+id/menu_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
