--- a/MissedConnections/app/src/main/res/layout/activity_add_connection.xml
+++ b/MissedConnections/app/src/main/res/layout/activity_add_connection.xml
@@ -46,4 +46,33 @@
             android:textColor="@color/colorPrimary"
             android:textSize="20sp" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/location_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingEnd="0dp"
+            android:paddingStart="10dp"
+            android:paddingTop="8dp"
+            android:text="@string/selectedLocation"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/location_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingEnd="0dp"
+            android:paddingStart="10dp"
+            android:paddingTop="8dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="12sp" />
+    </LinearLayout>
 </LinearLayout>
