--- a/MissedConnections/app/src/main/res/values/colors.xml
+++ b/MissedConnections/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#9975b9</color>
+    <color name="colorSecondary">#3642e5</color>
+    <color name="colorGrey">#8C8C8C</color>
 </resources>
